fix katex alignment after version bump

--- a/packages/obonode/obojobo-chunks-math-equation/viewer-component.scss
+++ b/packages/obonode/obojobo-chunks-math-equation/viewer-component.scss
@@ -31,17 +31,17 @@
 		}
 	}
 
-	&.align-left .katex-display,
+	&.align-left .katex-display > .katex,
 	&.align-left .equation-label {
 		text-align: left;
 	}
 
-	&.align-right .katex-display,
+	&.align-right .katex-display > .katex,
 	&.align-right .equation-label {
 		text-align: right;
 	}
 
-	&.align-center .katex-display {
+	&.align-center .katex-display > .katex {
 		text-align: center;
 	}
 
